fixed navbar invisibility issue.

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,13 @@
 #navIcon img {
   width: 50%;
   position: absolute;
-  z-index:1;
+  z-index:2;
+}
+
+#navIcon img:hover {
+  /* filter: url(filters.svg#grayscale);  Firefox 3.5+*/
+  filter: gray; /* IE5+ */
+  -webkit-filter: grayscale(1); /* webkit nightlies & chrome canary */
 }
 
 #leaf {
@@ -62,5 +68,18 @@
   width: 300px;
   height: 300px;
   position: absolute; top: 0px; left: 0px;
+  z-index: 1;
+}
+
+#navBar {
+  width: 100%;
+  height: 150px;
+  margin: 75px 0 0 300px;
+  background-color: black;
+  opacity: 0.5;
   z-index: 0;
+}
+
+#nav {
+  width: 100%;
 }
